--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="favicons/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>Degenplay</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Degenplay</title>  
   </head>
   <body>
     <div id="root"></div>
